Added comments labelling code from Markus

--- a/pabutools/visualisation/page-summary/template.html
+++ b/pabutools/visualisation/page-summary/template.html
@@ -152,6 +152,7 @@
 
     !SAMPLE_EXPLANATION2!
 
+    <!-- Heading before table is displayed-->
     <h2> Wyniki </h2>
 
     <p> Tabelkę można posortować klikając na kolumnę względem której chcemy ją uszeregować.</p></br>
