Fix mistake within tooltip of red bar in summary page.
This red bar represents the funding lost, but we were putting in the initial voter funding instead which gave the incorrect value.

--- a/pabutools/visualisation/page-summary/template_summary.html
+++ b/pabutools/visualisation/page-summary/template_summary.html
@@ -243,7 +243,7 @@ Maybe implement page description?
                                 onmouseover='highlight_project(["TODO"])'
                                 onmouseout='unhighlight_project(["TODO"])'
                                 style='width: {{ round.funding_lost_percent }}&#37;;'
-                                data-tippy-content='<html lang=\"en\"><body>From the initial total funding, <b> {{ round.initial_voter_funding }} GBP </b> was spent on previously selected projects. </br> 
+                                data-tippy-content='<html lang=\"en\"><body>From the initial total funding, <b> {{ round.funding_lost }} GBP </b> was spent on previously selected projects. </br> 
                                 Most of the funding was spent on: TODO
 
                                 <!-- For ...
