Changed order of Projects in Bar Chart, Added Explanations

--- a/pabutools/visualisation/page-summary/template_summary.html
+++ b/pabutools/visualisation/page-summary/template_summary.html
@@ -170,7 +170,14 @@ Maybe implement page description?
 </head>
 
 <body>
-    <!-- <h1>!FILE!</h1> -->
+    <h1>{{ election_name }}</h1>
+    <p>
+        The following web-page outlines the result of the {{ election_name }} vote. The vote was conducted using the method of equal shares. This initial page contains a summary of the results in a table and a chart showing the allocation of the budget across projects. This is followed by an in-depth summary of the election, iterating round by round through which project was selected and why.
+    </p>
+    <h2>Method of Equal Shares
+    </h2>
+    <p>The method of equal shares scheme is a method of allocating a budget to a set of projects. The process is based on the idea that every voter has a budget available to them, and they can allocate this budget by voting for the projects they support. Each voter's budget is deducted from the cost of the project they vote for - if that project is selected. After this, the remaining budget is passed to later project selection rounds. This process is repeated until all projects are selected or the budget is exhausted.
+    </p>
     <!-- !DESCRIPTION! -->
 
     <!-- !SAMPLE_EXPLANATION1! -->
